@@ -3,6 +3,7 @@ Copy-alSourceFiles will insert a sequence number if duplicate destination file n
 Switch to original behavior on importing testtoolkit if running Windows Authentication - the error is tied to UserPassword auth
 Add parameter -sort to Get-BcContainerAppInfo to get apps sorted with dependencies first or last (for uninstalling etc.)
 Remove "runtime" property from generated app.json to use latest
+Support multitenancy for Publish-NewApplicationToBcContainer
 
 0.6.2.92
 Bugfix #549 -assignPremiumPlan doesn't work with 15.x containers
